fix: footer jumping up while guide is loading (#834)
While a guide is loading we show a loading message and the page compresses down which causes the footer to show up for a split second. These changes add a style that always pushes the footer off the viewport.

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/guide-viewer/guide-viewer.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/guide-viewer/guide-viewer.scss
@@ -1,4 +1,4 @@
-@import "~@angular/material/theming";
+@import '~@angular/material/theming';
 @import '../../../styles/constants';
 
 /* For desktop, the content should be aligned with the page title. */
@@ -15,6 +15,10 @@ $guide-content-margin-side-xs: 15px;
   padding: 20px $content-padding-side 0;
   display: block;
   text-align: center;
+
+  // Ensures that the footer is pushed to the bottom and prevents
+  // the page from jumping around while something is loading.
+  min-height: 100vh;
 
   @media ($mat-xsmall) {
     padding-left: $content-padding-side-xs;
